improve frontend UI and add backend service tests